SFOS-1164 	 Ant daemon tasks do not use the same security manager as the shell scripts. This adds a new option and defaults it to "none" in common.xml