@@ -68,6 +68,11 @@ public abstract class SmartFrogTask extends TaskBase implements SysPropertyAdder
      */
     private boolean diagnostics = false;
 
+    /**
+     * This is the classname of the security manager to run with.
+     */
+    protected String securityManager = DUMMY_SECURITY_OPTION;
+
     public static final String MESSAGE_SPAWNED_DAEMON = "Spawned SmartFrog daemon started";
     public static final String MESSAGE_IGNORING_FAILONERROR = "Ignoring failonerror setting for spawned application";
     public static final String MESSAGE_IGNORING_TIMEOUT = "Ignoring timeout setting for spawned application";
@@ -83,6 +88,15 @@ public abstract class SmartFrogTask extends TaskBase implements SysPropertyAdder
     public static final String LOCALHOST_IPV4 = "127.0.0.1";
     public static final String EXIT_AFTER_STARTING = "-e";
     public static final String SF_DIAGNOSTICS = "-d";
+    private static final String DEFINE_JAVA_SECURITY_MANAGER = "-Djava.security.manager";
+    private static final String SMARTFROG_SECURITY_MANAGER
+            = "org.smartfrog.sfcore.security.ExitTrappingRealSecurityManager";
+    public static final String SMARTFROG_SECURITY_OPTION = "smartfrog";
+    public static final String DEFAULT_SECURITY_OPTION = "default";
+    public static final String SUN_SECURITY_OPTION = "sun";
+    public static final String NONE_SECURITY_OPTION = "none";
+    protected static final String DUMMY_SECURITY_MANAGER = "org.smartfrog.sfcore.security.ExitTrappingSecurityManager";
+    public static final String DUMMY_SECURITY_OPTION = "dummy";
 
     protected SmartFrogTask() {
 
@@ -289,7 +303,6 @@ public abstract class SmartFrogTask extends TaskBase implements SysPropertyAdder
                 throw new BuildException(ERROR_UNEXPECTED_FILE_TYPE + initialSmartFrogFile);
             }
         }
-
         this.initialSmartFrogFile = initialSmartFrogFile;
     }
 
@@ -350,7 +363,6 @@ public abstract class SmartFrogTask extends TaskBase implements SysPropertyAdder
      */
     public void addSecurity(Security security) {
         securityHolder.addSecurity(security);
-
     }
 
     /**
@@ -406,7 +418,6 @@ public abstract class SmartFrogTask extends TaskBase implements SysPropertyAdder
      */
     public void setFailOnError(boolean failOnError) {
         this.failOnError = failOnError;
-
     }
 
 
@@ -551,7 +562,7 @@ public abstract class SmartFrogTask extends TaskBase implements SysPropertyAdder
      * @param argument JVM argument
      */
     public void defineJVMArg(String argument) {
-        smartfrog.createJvmarg().setValue(argument);
+        createJVMarg().setValue(argument);
     }
 
     /**
@@ -601,11 +612,12 @@ public abstract class SmartFrogTask extends TaskBase implements SysPropertyAdder
         //delayed setting only when the flag is true reduces the need to flip the bit
         propagateSpawnIncompatibleSettings();
         //do any security configurations we need
+        bindToSecurityManager();
         if (securityHolder.isDefined()) {
             securityHolder.applySecuritySettings(this);
         } else {
             //use the default or simpler settings
-            // securityPolicy.applySecurityPolicy(this,smartfrog);
+            securityPolicy.applySecurityPolicy(this,smartfrog);
         }
 
         //last minute logging
@@ -769,4 +781,48 @@ public abstract class SmartFrogTask extends TaskBase implements SysPropertyAdder
         setHost(LOCALHOST);
     }
 
+    /**
+     * Set the security manager
+     * <ol>
+     * <li>"" : no security manager</li>
+     * <li>"none" : no security manager</li>
+     * <li>"sun" : the built in security manager</li>
+     * <li>"smartfrog" : the smartfrog security manager</li>
+     * <li>"default" : the default security manager (currently smartfrog)</li>
+     * <li> "classname" : any security manager defined by a full classname. This manager must be on the classpath</li>
+     * @param securityManager the new security manager
+     */
+    public void setSecurityManager(String securityManager) {
+        this.securityManager = securityManager;
+    }
+
+    /**
+     * Bind to the chosen security manager.
+     */
+    public void bindToSecurityManager() {
+        String message;
+        String jvmarg;
+        if (securityManager == null || securityManager.isEmpty() || NONE_SECURITY_OPTION.equals(securityManager)) {
+            message = "No Security Manager";
+            jvmarg = null;
+        } else if (SUN_SECURITY_OPTION.equals(securityManager)) {
+            message = "Using Sun Security Manager";
+            jvmarg = DEFINE_JAVA_SECURITY_MANAGER;
+        } else if (DUMMY_SECURITY_OPTION.equals(securityManager)) {
+            message = "Using Dummy Security Manager";
+            jvmarg = DEFINE_JAVA_SECURITY_MANAGER + "=" + DUMMY_SECURITY_MANAGER;
+        } else if (SMARTFROG_SECURITY_OPTION.equals(securityManager) || 
+                DEFAULT_SECURITY_OPTION.equals(securityManager)) {
+            message = "Using SmartFrog Security Manager";
+            jvmarg = DEFINE_JAVA_SECURITY_MANAGER + "=" + SMARTFROG_SECURITY_MANAGER;
+        } else {
+            //it is a class of its own
+            message = "Using Security Manager " + securityManager;
+            jvmarg = DEFINE_JAVA_SECURITY_MANAGER + "=" + securityManager;
+        }
+        log(message, Project.MSG_VERBOSE);
+        if (jvmarg != null) {
+            defineJVMArg(jvmarg);
+        }
+    }
 }
